Fixed some layout issues

--- a/src/app/core/components/home/home.component.scss
+++ b/src/app/core/components/home/home.component.scss
@@ -7,3 +7,16 @@
   border-radius: 5%;
   margin: 0 10 0 10;
 }
+
+.recommended__item{
+  border-width: 1;
+  border-color: #1d1d1d;
+  border-radius: 5;
+}
+
+.recommended__item_image{
+  width: 100;
+  height: 100;
+  border-radius: 5%;
+  margin: 0 5 0 5;
+}
